# minicode

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README-ru.md  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/interpreter/: arrays.rs  calculate.rs  create.rs  include.rs
core/src/opcode/: mod.rs
core/src/parser/: appropriation.rs  calculation.rs  exec.rs  file.rs  include.rs  network.rs  opcode_parser.rs  print.rs  sleep.rs  user_var.rs  write.rs
core/tests/examples/: arrays_2.mcode  extended_conditions.mcode  fib.mcode  include.mcode  include_p.mcode  print_file.mcode  send_tcp.mcode  sleep_2.mcode
docs/: index.html  index.md  ru.html  ru.md
examples/: hello_world.mc
src/: main.rs  self_update.rs
src/code_runner/: mod.rs
src/files/: mod.rs
src/interpreter/: arrays.rs  calculate.rs  code_operations.rs  condition.rs  create.rs  error_printer.rs  execute.rs  include.rs  mod.rs  network.rs  opcode_result_type.rs  print.rs  print_file.rs  print_value.rs
src/network/: mod.rs
src/opcode/: mod.rs
src/parser/: appropriation.rs  arrays.rs  calculation.rs  condition.rs  include.rs  mod.rs  network.rs  opcode_operations.rs  opcode_parser.rs  print.rs  sleep.rs  user_var.rs
test/examples/: arithmetic.mc  cli.mc  extended_conditions.mc  fib.mc  file_write.mc  float.mc  float.mcode  hello_world.mc  inc_and_dec.mc  include.mc  include.mcode  output_by_characters.mc  print_file.mc
tests/examples/: arrays_1.mcode  condition.mcode  execute.mcode  file_write.mcode  include.mcode  more_or_less.mcode  sleep.mcode  sleep_2.mcode  sleep_3.mcode
