[package]
name = "minicode"
version = "1.4.4"
authors = ["Kirill Leonov <leonov7632@gmail.com>"]
edition = "2021"
repository = "https://github.com/leonovk/minicode"
homepage = "https://github.com/leonovk/minicode"
license = "GPL-3.0"
description = "Esoteric programming language"
exclude = [
    ".github",
    "docs",
]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
pretty_assertions = "1.4.0"
self_update = { version = "0.41.0", features = ["archive-tar", "archive-zip", "compression-flate2"] }
